# ChemLogic

./: .gitignore  Makefile  pyproject.toml  requirements.txt
notebooks/: run_experiment.ipynb
src/chemlogic/: main.py
src/chemlogic/datasets/: CustomDataset.py  Dataset.py  SmilesDataset.py  __init__.py  datasets.py
src/chemlogic/datasets/utils/: smiles_conversion.py
src/chemlogic/knowledge_base/: chemrules.py  subgraphs.py
src/chemlogic/knowledge_base/functional_groups/: GeneralFunctionalGroups.py  Hydrocarbons.py  NitrogenGroups.py  OxygenGroups.py  RelaxedFunctionalGroups.py  SulfurGroups.py  __init__.py
src/chemlogic/knowledge_base/subgraph_patterns/: CircularPatterns.py  CollectivePatterns.py  NeighborhoodPatterns.py  YShapePattern.py
src/chemlogic/models/: CWNet.py  KGNN.py  Model.py
src/chemlogic/utils/: Pipeline.py
tests/: test_datasets.py  test_functional_groups.py  test_models.py  test_pipeline.py  test_subgraph_patterns.py
