[project]
name = "ChemLogic"
version = "0.1.2"
description = "ChemLogic is a neurosymbolic framework that integrates relational logic syntax with various graph neural network (GNN) architectures to model chemical knowledge. It encodes functional groups and molecular subgraph patterns into a differentiable, explainable architecture, enabling the construction of interpretable and modular GNN-based models for chemical reasoning."
authors = [
    {name = "Kai Hodzic", email = "hodzic.e.k@outlook.com"},
]
requires-python = ">=3.11"
dependencies = [
    "neuralogic==0.8.0",
    "optuna>=4.3.0",
    "scikit-learn>=1.6.1",
    "RDKit>=2025.3.2",
    "pysmiles>=2.0.0",
    "torch-geometric>=2.6.1",
    "mlflow>=2.14.0",
    "torch>=2.7.1",
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Operating System :: OS Independent"
]

keywords = [
  "chemistry",
  "differentiable",
  "knowledge base",
  "graph neural network",
  "GNN",
  "neurosymbolic",
  "explainable",
  "molecule",
  "property",
  "molecular property prediction",
  "functional group",
  "logic",
  "logic programming",
  "relational",
  "relational logic",
  "cheminformatics"
]


[project.urls]
Homepage = "https://github.com/erhc/ChemLogic"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]


[tool.pdm]
package-dir = "src"
distribution = true

[tool.pdm.scripts]
test = "pytest"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.12.0",
    "ipython>=9.0.0",
    "ipykernel>=7.0.0",
    "ruff>=0.9.10",
    "nbconvert==7.16.6",
    "pdm-bump>=0.9.12",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]